1. Метод .of [#70623 #314875]